--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             class="card-image"
           />
           <div class="card-info">
-              <h2 class="card-heading">Team Flash vs. Saigon phantom</h2>
+              <h2 class="card-heading">2021 World Champs Gaming Warzone</h2>
               <div class="author">
                 <img
                   src="https://cdn.dribbble.com/users/154194/screenshots/16479293/media/0c13224fdd8d9d833366b7c366c0c35f.jpg"
@@ -76,7 +76,7 @@
                 />
                 <div class="author-desc">
                   <p class="author-name">
-                    Arunas Kacinskas
+                   Kacinskas
                     <ion-icon
                       name="checkmark-circle"
                       class="author-icon"
